--- a/css/index.css
+++ b/css/index.css
@@ -115,3 +115,39 @@ button:hover {
 .artist img {
   width: 100%;
 }
+
+/* Media Query for 500px; Mobile Design */
+@media (max-width: 500px) {
+  /* Header Changes */
+  nav {
+    display: flex;
+    justify-content: space-around;
+  }
+  nav span {
+    border-left: 0.6 solid #626262;
+  }
+  a {
+    font-size: 2rem;
+    margin: auto 10%;
+  }
+
+  /* Title Section Changes */
+  .title-container div,
+  .title-container hr {
+    width: 100vw;
+  }
+  .title-container h1 {
+    font-size: 5rem;
+    font-weight: bold;
+  }
+
+  /* Artists Containers */
+  .artists-container {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .artist {
+    width: 70%;
+    margin: auto auto;
+  }
+}
